# ill-ldap-sync

./: Makefile  README.md  add_group.py  add_ldap_ad_group.py  add_user.py  config.clean  gen_ad_passwd.py  get_lustre_idmap.sh  hostvenv  nodemap  nodemap_cron.sh  nodemap_info  push_lustre_idmap.sh  sync_group_idmap.py  sync_groups_ad.py  sync_groups_ldap_ad.py  user_nodemap.py
adldap/: adldap.py  pyproject.toml  setup.py
mgs/: get_idmap_gids  get_idmap_uids  nodemap_add_cron.sh  nodemap_add_groups.sh  nodemap_add_users.sh  nodemap_del_groups.sh
ncsaldapapi/: ncsaldapapi.py  pyproject.toml  setup.py
